src/app/app.component.css
@import url('https://fonts.googleapis.com/css?family=Montserrat');

body {
    font-family: 'Montserrat', sans-serif;
    background: #0a2a43;
    min-height: 6000px;
}

/* Text Container */
section {
    height: 100vh;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    position: relative;
}

section:before {
    
    content: '';
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100px;
    background: linear-gradient(to top, #0a2a43, transparent);
    z-index: 1000;
}

section:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /*  background: #0a2a43; */
    z-index: 3000;
    /*  mix-blend-mode: color; */
}

section img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    pointer-events: none;
}

#arrow {
    position: absolute;
    top: 85%;
    left: 50%;
    width: 100px;
    height: 100px;
    z-index: 2000;
    transform: rotate(90deg);
}



/* Typewriter Text */
#tw1 {
    position: relative;
    color:#ccc;
    font-size: 4.2vw;
    font-weight: 600;
    z-index: 1;
    display: inline-block;
    padding: 0.5vw 1vw;
}

#layer5 {
    z-index: 4;
}

#layer4 {
    z-index: 2;
}

#bird {
    top: 5.1vh;
    left: 5.1vw;
    width: 10.1vw;
    height: 10.1vh;
    z-index: 3;
    overflow: visible;
}

/* Animation Code */
@keyframes animate{
    40%, 60% {
        left: 100%;
    }
    100% {
        left: 0%;
    }
}




/* OLD CODE */

/* Animation of Typing */
.container .text.display:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: #2b323c;
    border-left: 2px solid #ccc;
    animation: animate 4s steps(43) infinite;
}

